<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.MediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_co2_header"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/two_grid_unit"
            android:paddingEnd="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_co2_text"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_xsmall" />


        <TextView
            style="@style/AppTheme.MediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_power_header"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/two_grid_unit"
            android:paddingEnd="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_power_text"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            style="@style/AppTheme.MediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_legend_header"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/two_grid_unit"
            android:paddingEnd="@dimen/two_grid_unit"
            android:text="@string/activity_analysis_info_legend_text"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_xsmall" />

    </LinearLayout>
</ScrollView>
