<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/two_grid_unit">

    <TextView
        android:id="@+id/fragment_report_form_1_header"
        style="@style/AppTheme.MediumFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_report_form_1_header"
        android:textColor="@color/text_gray_darker"
        android:textSize="@dimen/text_size_normal" />

    <RadioGroup
        android:id="@+id/fragment_report_form_1_radio_group_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/three_grid_unit">

        <RadioButton
            android:id="@+id/fragment_report_form_1_radio_singlehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_report_form_location_singlehouse"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/fragment_report_form_1_radio_multihouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_location_multihouse"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/fragment_report_form_1_radio_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_location_rest"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_small" />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/fragment_report_form_1_radio_error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minus_three_grid_unit"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_report_form_1_radio_error_arrow"
            android:background="@drawable/rounded_corner_solid_red"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_1_location_error"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_xsmall" />

        <View
            android:id="@+id/fragment_report_form_1_radio_error_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:background="@drawable/triangle_red" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_report_form_1_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/fragment_report_form_1_subheader_details"
            style="@style/AppTheme.MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_1_subheader_details"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_xsmall" />

        <RadioGroup
            android:id="@+id/fragment_report_form_1_radio_group_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fragment_report_form_1_subheader_details"
            android:layout_marginTop="9dp">

            <RadioButton
                android:id="@+id/fragment_report_form_1_radio_no_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_report_form_1_radio_no_details"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/fragment_report_form_1_radio_without_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:text="@string/fragment_report_form_1_radio_without_power"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/fragment_report_form_1_radio_with_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:text="@string/fragment_report_form_1_radio_with_power"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_small" />

            <RadioButton
                android:id="@+id/fragment_report_form_1_radio_more_houses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:text="@string/fragment_report_form_1_radio_more_houses"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_small" />

        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_report_form_1_no_details_selected_error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minus_three_grid_unit"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_report_form_1_no_details_selected_error_arrow"
            android:background="@drawable/rounded_corner_solid_red"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_1_location_error"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_xsmall" />

        <View
            android:id="@+id/fragment_report_form_1_no_details_selected_error_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:background="@drawable/triangle_red" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_report_form_1_location_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/three_grid_unit"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/fragment_report_form_1_header_location_details"
            style="@style/AppTheme.MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_report_form_1_header_location_details"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_xsmall" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_report_form_1_header_location_details"
            android:layout_marginTop="@dimen/one_grid_unit"
            android:background="@drawable/rounded_corner_gray_darker">

            <EditText
                android:id="@+id/fragment_report_form_1_location_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_white"
                android:gravity="top"
                android:hint="@string/fragment_report_form_1_location_details"
                android:maxLength="100"
                android:minHeight="144dp"
                android:padding="@dimen/one_grid_unit" />
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_report_form_1_location_details_error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minus_three_grid_unit"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_report_form_1_location_details_error_arrow"
            android:background="@drawable/rounded_corner_solid_red"
            android:padding="@dimen/two_grid_unit"
            android:text="@string/fragment_report_form_1_location_details_error"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_xsmall" />

        <View
            android:id="@+id/fragment_report_form_1_location_details_error_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:background="@drawable/triangle_red" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_grid_unit">

        <TextView
            android:id="@+id/fragment_report_form_1_header_more_details"
            style="@style/AppTheme.MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_report_form_1_header_more_details"
            android:textColor="@color/text_gray_darker"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/fragment_report_form_1_header_details_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:layout_toEndOf="@+id/fragment_report_form_1_header_more_details"
            android:text="@string/fragment_report_form_1_header_more_details_optional"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_xsmall" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_report_form_1_more_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_grid_unit"
        android:background="@drawable/rounded_corner_gray_darker">

        <EditText
            android:id="@+id/fragment_report_form_1_more_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white"
            android:gravity="top"
            android:hint="@string/fragment_report_form_1_more_details"
            android:maxLength="150"
            android:minHeight="144dp"
            android:padding="@dimen/one_grid_unit" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/fragment_report_button_to_tab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/two_grid_unit"
        android:background="@drawable/rounded_corner_solid_blue"
        android:padding="@dimen/one_grid_unit">

        <TextView
            android:id="@+id/fragment_report_button_to_tab2_text"
            style="@style/AppTheme.MediumFont"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/four_grid_unit"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:gravity="center"
            android:text="@string/fragment_report_button_to_tab2_text"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_xsmall" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/two_grid_unit"
            android:layout_height="@dimen/two_grid_unit"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/one_grid_unit"
            android:layout_toEndOf="@+id/fragment_report_button_to_tab2_text"
            android:src="@drawable/ic_arrow_right_blue"
            android:tint="@color/text_white" />

    </RelativeLayout>

</LinearLayout>
